cmake_minimum_required(VERSION 3.16)
project(cpplearn)

set(CMAKE_CXX_STANDARD 17)

add_executable(ObjectInit Unit4/ObjectInit.cpp Unit4/Person.hpp)
add_executable(ObjectCopy Unit4/ObjectCopy.cpp Unit4/Person.hpp)
add_executable(ObjectArrayAndPoint Unit4/ObjectArrayAndPoint.cpp Unit4/Person.hpp)
add_executable(ReturnObject Unit4/ReturnObject.cpp Unit4/Person.hpp)
add_executable(ClassInit Unit4/ClassInit.cpp Unit4/Person.hpp)
add_executable(Constexpr Unit5/Constexpr.cpp)
add_executable(DelegationConstructor Unit5/DelegationConstructor.cpp)
add_executable(Friend Unit5/Friend.cpp)
add_executable(CopyConstructor Unit5/CopyConstructor.cpp)
add_executable(StructuredBinding Unit5/StructuredBinding.cpp)
add_executable(Inheritance Unit6/Inheritance.cpp Unit6/Person.hpp)
add_executable(NameHidingInInheritance Unit6/NameHidingInInheritance.cpp Unit6/Person.hpp)
add_executable(RunTimePolymorphism Unit6/RunTimePolymorphism.cpp)
add_executable(Accessibility Unit6/Accessibility.cpp)
add_executable(VirtualFunction Unit6/VirtualFunction.cpp)